# scheumine--terminal-fire-animation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
development/global_variables/: global_variables.h
development/include/: generate_fire.h  get_terminal_size.h
development/src/: generate_fire.cpp
